# rust_http_server

./: .rusty-hook.toml  Cargo.toml  README.md
public/: index.html
src/: main.rs  server.rs  website_handler.rs
src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
