[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
tokio ={ version = "1.0", features = ["full"]}
[dev-dependencies]
rusty-hook = "^0.11.2"
clippy = "0.0.302"


